--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["yjhmelody <465402634@qq.com>"]
 edition = "2018"
 keywords = ["parser", "netrc", "no-std"]
-categories = ["parser"]
+categories = ["parsing"]
 documentation = "https://docs.rs/netrc-rs"
 description = "Parser for .netrc file"
 homepage = "https://github.com/yjhmelody/netrc-rs"
