--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ matrix:
   allow_failures:
     - rust: nightly
 
+before_script:
+  - rustup component add clippy
+  - rustup component add rustfmt
+
 script:
-  - cargo clippy --all -- -D warnings
   - cargo fmt --all -- --check
+  - cargo clippy --all -- -D warnings
   - cargo test --verbose
