--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ before_script:
 script:
   - cargo fmt --all -- --check
   - cargo clippy --all -- -D warnings
+  - cargo test --no-default-features --verbose
   - cargo test --verbose
